# openrag

./: .env.example  AGENTS.md  Dockerfile.frontend  Dockerfile.langflow  Dockerfile.langflow.dev  Makefile  README.md  docker-compose.host-backend.yml  docker-compose.yml  pyproject.toml
.github/workflows/: operator-ci.yml  test-integration.yml
alembic/versions/: 0006_revoke_provider_override_nonadmin.py
cloud_securityconfig/: roles.yml
docs/: package-lock.json  package.json  sidebars.js
flows/: ingestion_flow.json  openrag_agent.json  openrag_nudges.json  openrag_url_mcp.json
flows/components/: opensearch_multimodal.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css
frontend/components/: chat-renderer.tsx  duplicate-handling-dialog.tsx  file-browser-dialog.tsx  task-error-content.tsx  tasks_details.tsx
frontend/contexts/: task-context.tsx
frontend/lib/: chat-stream-parsers.ts  fetch-server.ts  task-error-display.ts  task-utils.ts
frontend/stubs/: sharp-0.34.5.tgz
kubernetes/operator/: CLIENT_GENERATION.md  Makefile  go.mod  go.sum
scripts/ci/: run_integration_suite.sh
sdks/mcp/: README.md  pyproject.toml
sdks/mcp/src/openrag_mcp/: __init__.py
sdks/python/: pyproject.toml
sdks/typescript/: package-lock.json  package.json
securityconfig/: roles.yml
src/: agent.py  dependencies.py  main.py  session_manager.py
src/api/: acl.py  connectors.py  documents.py  langflow_files.py  langflow_ingest.py  models.py  provider_health.py  settings.py  tasks.py
src/app/: container.py  middleware.py
src/config/: settings.py
src/connectors/: base.py  connection_manager.py  google_drive_acl.py  langflow_connector_service.py  microsoft_graph_acl.py  service.py
src/db/: seed.py
src/models/: processors.py  tasks.py  url.py
src/services/: api_key_service.py  auth_service.py  default_docs_service.py  dls_principal_service.py  document_index_writer.py  document_service.py  file_service.py  flows_service.py  group_acl_service.py  knowledge_filter_service.py  langflow_file_service.py  langflow_ingest_token_service.py  monitor_service.py  search_service.py  task_service.py  user_service.py
src/utils/: acl_utils.py  embeddings.py  file_utils.py  group_acl.py  opensearch_delete.py  opensearch_init.py  opensearch_queries.py  opensearch_utils.py  provider_health_cache.py
tests/: conftest.py
tests/unit/: test_agent_response.py  test_agent_sources.py  test_agent_stream_delta.py  test_api_key_service.py  test_connector_processor_filename_dedupe.py  test_document_delete_by_id.py  test_embedding_fields.py  test_encryption.py  test_flow_opensearch_outputs.py  test_group_acl.py  test_knowledge_filter_service.py  test_langflow_agent_system_prompt.py  test_langflow_file_service_two_phase.py  test_langflow_ingest_callback.py  test_langflow_safe_filename.py  test_oauth_encryption.py  test_onedrive_connector.py  test_opensearch_security_setup.py  test_processor_mapping_client.py  (+4 more)
(+97 files in other folders)
