[project]
name = "openrag-mcp"
version = "0.3.0"
description = "RETIRED — OpenRAG MCP is now built into the OpenRAG backend as a streamable-HTTP endpoint at /mcp. See README for migration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenRAG Team" }]
keywords = ["mcp", "openrag", "rag", "ai", "llm"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openrag_mcp"]

